--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ I feel very sad for the moon😢 but babe, how can u be this cute! common, give 
 <h4 class="a">hahaa😉😄</h4>
 
 <h2 class="a">Happy birthday love!💓</h2>
-<h4 class="a">May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4>
+<h4>May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4>
 
 <img src="godblessu.jpg" alt="" style=width="20%">
 </body>
