--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <img src="hbd.gif" alt="" style="width:65%;" >
 
 <img src="sm31.png" alt="dp" draggable="true" style="width:50%">
-<img src="my_baby-168813.gif" alt="" width="30%" >
-
 
 <h1 class="a">Oh heyy,it's your birthday! </h1>
 <h4>As always the <em>Moon</em> is gonna mourn today, since you were born and it lost <strong><em>'The Beautiful'</em></strong> tag to you.
@@ -21,9 +19,10 @@ I feel very sad for the moon😢 but babe, how can u be this cute! common, give 
 <h4>hahaa😉😄</h4>
 
 <h1 class="a">Happy birthday love!💓</h1>
-<h4>May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4>
+<h4>May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4> <br>
 
-<img src="godblessu.jpg" alt="" style=width="20%">
+    <h1 class="a">God bless u</h1>
+    <img src="my_baby-168813.gif" alt="" width="30%" >
 </body>
 
 
