--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ I feel very sad for the moon😢 but babe, how can u be this cute! common, give 
 <h1 class="a">Happy birthday love!💓</h1>
 <h4>May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4> <br>
 
-    <h1 class="a"><strong> God bless u </strong></h1>
+    <h1 class="a" style="font-size:100px"><strong> God bless u </strong></h1>
     <img src="my_baby-168813.gif" alt="" width="30%" >
 </body>
 
