--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <img src="sm31.png" alt="dp" draggable="true" style="width:50%">
 
-<h1 class="a">Oh heyy,it's your birthday! </h1>
+<h1 class="a" style="font-size:75px">Oh heyy,it's your birthday! </h1>
 <h4>As always the <em>Moon</em> is gonna mourn today, since you were born and it lost <strong><em>'The Beautiful'</em></strong> tag to you.
 I feel very sad for the moon😢 but babe, how can u be this cute! common, give a chance to the moon. You can't just always be this awesomly and lovingly cute!😍</h4>
 
 <h4>hahaa😉😄</h4>
 
-<h1 class="a">Happy birthday love!💓</h1>
+<h1 class="a" style="font-size:75px">Happy birthday love!💓</h1>
 <h4>May you always be this happy(ofcourse more than this)😁 and cherishing,loving,praying,and as cute as ever!.Thank you for coming into my life😇😊.</h4> <br>
 
     <h1 class="a" style="font-size:100px"><strong> God bless u </strong></h1>
