--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My first webpage</title>
+    <title>🎂Happy Birthday🎂</title>
     <link rel="stylesheet" href="stylesheet.css">
 
   </head>
